# sysext-bakery

./: .gitignore  Cargo.toml  TODO.txt  config.yml
.devcontainer/: devcontainer.json
src/: cli.rs  main.rs
src/bake/: filesystem.rs  mod.rs
src/cli/: bake.rs  mod.rs  render.rs
src/commands/: mod.rs
src/native_commands/: mod.rs
src/render/: mod.rs
src/templates/: extension-release.hbs  systemd.unit.hbs
tests/: bake.rs  cli.rs  config.yml  render.rs
tests/samples/: _any_os_aarch64_arch.txt  _any_os_x86_64_arch.txt  debian_os.txt  test-render-basic.txt
tests/templates/: sample_template.txt
