[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
embed-file = "0.1.0"
handlebars = "5.1.2"
serde = { version = "1.0.198", features = ["derive"] }

[dev-dependencies]
"assert_cmd" = "2"
