[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
duct = "0.13.7"
embed-file = "0.1.0"
env_logger = "0.11.3"
handlebars = "5.1.2"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
"assert_cmd" = "2"
rand = "0.8.5"

